# TryAgain

./: CMakeLists.txt  TryAgain.sln
PyApp/: PyApp.py  PyApp.pyproj
TryAgain/: CMakeLists.txt  TryAgain.qtvscr  TryAgain.vcxproj  TryAgain.vcxproj.filters  TukeyContour3D.cpp  imgui.ini
TryAgain/assets/: fragment_core.glsl  vertex_core.glsl
TryAgain/assets/image/: plotter.cpp  plotter.h  stb_image_write.h
TryAgain/assets/shaders/: dashed_line.frag  dashed_line.vert  halfspace.frag  halfspace.vert  line.frag  line.vert  plotpoints.frag  points.frag  points.vert  polygon.frag  polygon.vert  preview.frag  preview.vert  selection_box.frag  selection_box.vert  sphere.frag  sphere.vert
TryAgain/bindings/: bindings.cpp
TryAgain/common/: _math.cpp  _math.h  data.h
TryAgain/imgui/: imgui.h
TryAgain/lib/: glad.c
TryAgain/scripts/: ResilientConsensus.hpp  sym_projection.cpp  sym_projection.h
TryAgain/src/: ConvexHull.cpp  TukeyContour.cpp  TukeyContour.h  TukeyContour3D.cpp  TukeyContour3D.h  TukeyRegion.cpp  TukeyRegion.h  main.cpp  test.cpp
TryAgain/src/geometry_primitive/: geometry_primitive.cpp  geometry_primitive.h  halfspace.hpp  line.hpp  points.hpp  polygon.hpp  rectangle.hpp  sphere.cpp  sphere.h  sphere.hpp
TryAgain/src/io/: camera.cpp  camera.h  mouse.cpp  mouse.h
TryAgain/src/programs/: halfspace.hpp  line.hpp  points.hpp  polygon.hpp  program.cpp  program.h  rectangle.hpp  sphere.cpp  sphere.h  sphere.hpp
TryAgain/src/rendering/: SelectionBox.hpp  shader.cpp  shader.h  vertexmemory.hpp
TryAgain/src/ui/: UI.cpp  UI.h  gif.h
plots/: Sim.csv  (+1 more)
(+5 files in other folders)
